# E-commerce-Assistant-agent

./: .gitignore  README.md  list_capabilities.py  llms_full.txt  pyproject.toml  requirements.txt  run_agent.py  run_app.py  test_single_tool.py  完整业务流程.md  清理总结.md  运行指南.md
BestSellers/: ops_demo.sqlite
BestSellers/operations_dashboard/: agent.py  config.py
BestSellers/operations_dashboard/data_sources/: amazon_business_reports.py  base.py
BestSellers/operations_dashboard/metrics/: calculations.py
BestSellers/operations_dashboard/pipeline/: pipeline.py
BestSellers/operations_dashboard/reporting/: formatter.py
configs/: ai_dashboard.json
docs/ai_dashboard/: INTERFACE_CONTRACT.md
operations_dashboard/: agent.py  call_insights_tool.py  cli.py  config.py  mcp_bridge.py  mcp_server.py  services.py  test.py  verify_amazon_keys.py  verify_openai_key.py
operations_dashboard/data_sources/: amazon_business_reports.py  base.py
operations_dashboard/metrics/: calculations.py
operations_dashboard/pipeline/: pipeline.py
operations_dashboard/reporting/: formatter.py
operations_dashboard/skills/: __init__.py  base.py  dashboard.py
operations_dashboard/storage/: repository.py
operations_dashboard/utils/: dates.py
src/ai_dashboard/: .env.example  .eslintrc.cjs  next.config.mjs  package-lock.json  package.json  playwright.config.mjs  vitest.config.mjs
tests/ai_dashboard/: playwright.config.mjs  smoke.mjs  vitest.config.mjs
trusted_directories/data/: operations_dashboard.sqlite3
trusted_directories/exports/: history_7445fa94555e4c64ad9d67d0bab52ed8.csv
(+34 files in other folders)
